Edit:Change html context in index.html

--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                         <div class="card">
                             <img src="./src/images/thesis-now-and-then.jpg" alt="thesis-now-and-then">
                             <div class="card-text">
-                                <h2 class="c-4a">Our Campus</h2>
-                                <p class="c-4b">Designer showcase of new prototype product</p>
+                                <h2 class="c-4a">Now and then</h2>
+                                <p class="c-4b">Research study about New York</p>
                             </div>
                         </div>
                     </div>
