Edit:(CSS) Improve left right image and video position

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
     <div class="content relative-64">
         <!-- container-1 -->
         <div class="container-1 bg-d8">
-            <img src="./src/images/banner.jpg" alt="Banner">
+            <div class="img-banner">
+                <img width="100%" src="./src/images/banner.jpg" alt="Banner">
+            </div>
             <div class="container-1-context c-4a">
                 <h1><strong>Learn somthing new everday</strong></h1>
                 <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
@@ -169,10 +171,12 @@
                 </div>
                 <div class="container-2">
                     <div class="container-4-left">
-                        <video width="400" controls>
-                            <source src="./src/videos/thesis.mp4" type="video/mp4">
-                            Your browser does not support HTML video.
-                        </video>
+                        <div class="Video">
+                            <video controls>
+                                <source src="./src/videos/thesis.mp4" type="video/mp4">
+                                Your browser does not support HTML video.
+                            </video>
+                        </div>
                         <div class="container-3 container-4-left-context">
                             <h2 class="c-4a">Reimagine urban</h2>
                             <p class="c-9b">"Curabitur vitae libero in ipusm porttitor consequat. 
