Edit:(CSS) Making border left 1 utility

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
 
-            <div class="container-2-right">
+            <div class="container-2-right b-l-1">
                 <div class="card" id="card-1">
                     <img id="img1" src="./src/images/information-orientation.jpg" alt="Orientation-img">
                     <div class="card-text">
