Edit: change container-4 heading

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <!-- container-4 using some of 2 and 3 -->
             <div class="container-3 bg-f3-f5">
                 <div class="container-3-head">
-                    <h1 class="c-4a">Start learning</h1>
+                    <h1 class="c-4a"></h1>Thesis exhibit
                 </div>
                 <div class="container-2">
                     <div class="container-4-left">
